apis are intregated

--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
+    "multer": "^1.4.5-lts.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.50.0",
+    "react-hook-form": "^7.56.1",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.0"
   },
