--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.74.11",
     "axios": "^1.9.0",
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
@@ -19,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.0"
   },
