--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
     "@tanstack/react-query": "^5.74.11",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
