--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
+    "html2pdf.js": "^0.10.3",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.344.0",
     "multer": "^1.4.5-lts.2",
