photo upload is im[lemented

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tanstack/react-query": "^5.74.11",
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
+    "browser-image-compression": "^2.0.2",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
@@ -27,6 +28,7 @@
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.56.1",
+    "react-image-crop": "^11.0.10",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-super-responsive-table": "^6.0.2",
