--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ai-blog-creator",
+  "name": "ai-transcriber",
   "private": true,
   "version": "0.1.0",
   "type": "module",
@@ -17,7 +17,7 @@
     "@types/react-datepicker": "^6.2.0",
     "axios": "^1.9.0",
     "browser-image-compression": "^2.0.2",
-    "clsx": "^2.1.0",
+    "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.0.8",
     "html2pdf.js": "^0.10.3",
@@ -27,12 +27,13 @@
     "react": "^18.3.1",
     "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
+    "react-h5-audio-player": "^3.10.0-rc.1",
     "react-hook-form": "^7.56.1",
     "react-image-crop": "^11.0.10",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.22.3",
     "react-super-responsive-table": "^6.0.2",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
