--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router-dom": "^6.22.3",
     "react-super-responsive-table": "^6.0.2",
     "tailwind-merge": "^3.3.0",
+    "uuid": "^11.1.0",
     "zustand": "^4.5.0"
   },
   "devDependencies": {
